# bsfs-supply-chain

./: .gitignore  Makefile  README.md  config.yaml  data_quality_report.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dashboard/: README.md  __init__.py  app.py  graph_utils.py  pyvis_graph.html
data/: Dependency relationships.csv  Final Table (csv).csv
data-engineering/: Final Table (csv).csv  scraper-v0
data/supply_chain/: edges.csv
data_engineering/: __init__.py  data_quality_report.py  macro_fetcher.py  ratio_calculator.py  sec_scraper.py  supply_chain_builder.py
propagation/: __init__.py  propagation_engine.py
risk_framework/: __init__.py  scorer.py  scores.csv  trade_credit.py
scripts/: seed_demo_data.py
src/: propagation_engine.py  scenarios.py
tests/: test_data_quality_report.py  test_propagation_engine.py  test_ratio_calculator.py  test_supply_chain_builder.py
utils/: config.py
