[project]
name = "bsfs-supply-chain-arthur"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2==3.1.6",
    "matplotlib==3.10.1",
    "networkx==3.4.2",
    "numpy==2.2.3",
    "pandas==2.2.3",
    "plotly==5.24.1",
    "pyarrow==19.0.0",
    "pytest==8.3.5",
    "pytest-cov==6.1.0",
    "python-dotenv==1.0.1",
    "pyvis==0.3.2",
    "pyyaml==6.0.2",
    "requests==2.31.0",
    "streamlit==1.43.2",
    "yfinance==0.2.50",
]
