[project]
name = "bsfs-supply-chain-arthur"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jinja2>=3.1.0",
    "matplotlib>=3.8.0",
    "networkx>=3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "pyarrow>=14.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "python-dotenv>=1.0.0",
    "pyvis>=0.3.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "streamlit>=1.35.0",
    "yfinance>=0.2.30",
]
